# FastAPI-Chat-Example

./: .gitignore  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
chat/application/auth/: auth.py  cfg.py  errors.py  hashing.py
chat/application/common/: services.py  uow.py
chat/application/services/: auth.py  user.py
chat/application/services/interfaces/: user.py
chat/infrastructure/db/: main.py  uow.py
chat/infrastructure/db/converters/: user.py
chat/infrastructure/db/migrations/: env.py
chat/infrastructure/db/migrations/versions/: 797d8b41f1cd_add_users_table.py  c6566b91c03a_added_users_table.py
chat/infrastructure/db/models/: __init__.py  base.py  users.py
chat/infrastructure/db/repositories/: base.py  user.py
chat/presentation/api/: _debug.py  cfg.py  main.py
chat/presentation/api/auth/: controller.py  request.py
chat/presentation/api/controllers/: user.py
chat/presentation/api/controllers/filters/: user.py
chat/presentation/api/middlewares/: logger.py
chat/transfer/: user.py
src/: config.py  log.py
src/application/common/: dto.py  exceptions.py  services.py
src/application/services/: user.py
src/application/services/exceptions/: user.py
src/application/services/interfaces/: user.py
src/infrastructure/db/: main.py
src/infrastructure/db/converters/: user.py
src/infrastructure/db/migrations/: env.py
src/infrastructure/db/models/: users.py
src/infrastructure/db/repositories/: user.py
src/presentation/api/: _debug.py  main.py
src/presentation/api/controllers/: user.py
src/transfer/: user.py
(+7 files in other folders)
