[tool.poetry]
name = "fastapi-chat-example"
version = "0.1.0"
description = "example chat service"
authors = ["ZhuraTown <swiglek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.0.2"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.27"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
pydantic-settings = "^2.2.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.3"}
pytz = "^2024.1"
uvicorn = "^0.27.1"
faker = "^23.2.1"
fastapi-pagination = "^0.12.19"
pydantic = "^2.6.3"
fastapi-filter = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
